--- a/src/app/home/pages/home/home.component.html
+++ b/src/app/home/pages/home/home.component.html
@@ -4,12 +4,14 @@
       <img src="assets/icons.png" class="card-img-top imgI" alt="...">
       <h4 class="text-center h4Home">< Hamburger /></h4>
       <h5 class="card-title"></h5>
-      <p class="p">
-        Hola bienvenido a mi sitio web, soy un ingeniero de sistemas apasionado
-        por los temas relacionados con el software y aqui podrás encontrar una
-        variedad de contenido desde tips hasta proyectos con diversas
-        tecnologias, espero disfrutes del contenido y te sea de utilidad.
-      </p>
+      <div class="container">
+        <p class="p">
+          Hola bienvenido a mi sitio web, soy un ingeniero de sistemas apasionado
+          por los temas relacionados con el software y aqui podrás encontrar una
+          variedad de contenido desde tips hasta proyectos con diversas
+          tecnologias, espero disfrutes del contenido y te sea de utilidad.
+        </p>
+      </div>
     </div>
   </div>
 </div>
